--- a/2. Implement a Debounce Function/index.html
+++ b/2. Implement a Debounce Function/index.html
@@ -11,7 +11,8 @@
   <h1 class="">Implement a Debounce Function</h1>
 
   <div class="input-container">
-    <input type="text" class="m-auto" placeholder="Type here to check Debouncing..." onchange="debounceFunc()">
+    <!-- <input type="text" class="m-auto" placeholder="Type here to check Debouncing..." onchange="debounceFunc()"> -->
+     <h2 class="text-center text-white">View Output in console</h2>
   </div>
 
   <script src="script.js"></script>
